--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
         <source src="./video/2025-12-28 17-34-05.mp4" type="video/mp4">
         你的瀏覽器不支援影片播放
     </video>
+    <audio src="./video/2025-12-28 17-34-05.mp4" controls></audio>
     <br>
     <h1>吳建宇說是手語課的時候</h1>
     <video width="640" controls>
         <source src="./video/2025-12-28 17-29-42.mp4" type="video/mp4">
         你的瀏覽器不支援影片播放
     </video>
-    </audio>    
+    <audio src="./video/2025-12-28 17-29-42.mp4" controls></audio>    
 </body>
 </html>
