--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <h1>吳建宇說是Vivian</h1>
+    <h5>影片可能要用電腦才能看</h5>
     <video width="640" controls>
         <source src="./video/2025-12-28 17-34-05.mp4" type="video/mp4">
         你的瀏覽器不支援影片播放
